--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- triangleWebGL.html -->
+<!--
+	Author: Dominick Jeong & Russell Mullinax
+	Assignment: Multi-Object: View-Based Interaction with Single Animation
+	Course: COSC4103
+	Professor: Dr. Baas
+	Due Date: 10/12/2025
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
